fixed home page gif cropping out

--- a/v2-ejs/public/style/pokemonMain.css
+++ b/v2-ejs/public/style/pokemonMain.css
@@ -23,7 +23,7 @@ body {
 
 .egg-container img {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 90%;
 }
 
 .pokeSearch {
